--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/jovenes a programar proyecto 1.PNG" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/nippon afiches.PNG" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4 text-secondary">Banners realizados para emprendimiento de comida Japonesa</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
